--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "Bot",
   "description": "Lightweight WhatsApp Bot",
-  "repository": "https://github.com/SudoAnirudh/E-V-A/",
+  "repository": "https://github.com/sonycovery/whatsapp-bot",
   "logo": "https://i.imgur.com/SiMhQ9z.jpg",
   "keywords": [
     "bot",
