--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SC",
+  "name": "𝐒𝐨𝐧𝐲 𝐂𝐨𝐯𝐞𝐫𝐲",
   "version": "1.1.2",
   "description": "WhatsApp Bot",
   "main": "index.js",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SudoAnirudh/E-V-A.git"
+    "url": "git+https://github.com/sonycovery/whatsapp-bot.git"
   },
   "keywords": [
     "whatsapp-bot"
@@ -22,9 +22,9 @@
   "author": "SonyCovery",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/SudoAnirudh/E-V-A/issues"
+    "url": "https://github.com/sonycovery/whatsapp-bot/issues"
   },
-  "homepage": "https://sonycovery.com/",
+  "homepage": "https://github.com/sonycovery/",
   "dependencies": {
     "@adiwajshing/baileys": "^3.5.2",
     "awesome-phonenumber": "^2.54.0",
